// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component size-small-default 1`] = `
.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 6px 6px 6px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 12.5rem;
}

.c1 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  padding-top: 8px;
  padding-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c1:not(:first-child) {
  padding-top: 4px;
}

.c1:last-child {
  padding-bottom: 8px;
}

.c1:not(:last-child) .c2 {
  border-bottom: 0;
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
</ul>
`;

exports[`List component size-small-with icon 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 6px 6px 6px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 12.5rem;
}

.c1 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  padding-top: 8px;
  padding-bottom: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c1:not(:first-child) {
  padding-top: 4px;
}

.c1:last-child {
  padding-bottom: 8px;
}

.c1:not(:last-child) .c3 {
  border-bottom: 0;
}

.c2 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 6px 0 0;
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
</ul>
`;

exports[`List component size-undefined-default 1`] = `
.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px 12px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 16rem;
}

.c4:not(:last-child) .c2 {
  border-bottom: 0;
}

.c5:not(:last-child) .c2 {
  border-bottom: 0;
}

.c1 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c1:not(:last-child) .c2 {
  border-bottom: 1px solid #E8E8E8;
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2 c3"
    >
      hello
    </div>
  </li>
</ul>
`;

exports[`List component size-undefined-with icon 1`] = `
.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: Noto Sans,"Noto Sans TC",sans-serif;
  font-size: 14px;
  line-height: 20px;
  padding: 12px 20px 12px 0;
}

.c0 {
  list-style: none;
  padding: 0;
  margin: 0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.22);
  display: inline-block;
  box-sizing: border-box;
  background-color: rgba(255,255,255,1);
  color: #303030;
  min-width: 16rem;
}

.c5:not(:last-child) .c3 {
  border-bottom: 0;
}

.c6:not(:last-child) .c3 {
  border-bottom: 0;
}

.c1 {
  position: relative;
  padding-left: 8px;
  border-left: 2px solid transparent;
  outline: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: top;
  -webkit-box-align: top;
  -ms-flex-align: top;
  align-items: top;
}

.c1:not(:last-child) .c3 {
  border-bottom: 1px solid #E8E8E8;
}

.c2 {
  margin-top: 12px;
  margin-right: 10px;
}

<ul
  class="c0"
>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
  <li
    class="c1"
    tabindex="0"
  >
    <div
      class="c2"
    >
      blah
    </div>
    <div
      class="c3 c4"
    />
  </li>
</ul>
`;
